WanaLyzer/out/numpy/typing/tests/data/fail/array_like.pyi
from _typeshed import Incomplete
from numpy._typing import ArrayLike as ArrayLike

class A: ...

x1: ArrayLike
x2: ArrayLike
x3: ArrayLike
scalar: Incomplete
array: Incomplete
